# AhaOS

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
ahaos/: agent_memory.py  atomize.py  cli.py  config.py  incubation.py  models.py  pressure.py  report.py  storage_jsonl.py  verification.py
docs/: agent_checkpoint.md  architecture.md  concept.md  evaluation.md  local_pilot.md  pilot.md  safety_model.md
docs/releases/: v0.1.0.md  v0.4.0.md
examples/coding_agent_pr_review/: atoms.jsonl  open_loops.jsonl
examples/local_pilot_input/: README.md  sample_events.jsonl  sample_notes.md
examples/pilot_input/: README.md  sample_notes.md
scripts/: agent_checkpoint.py  local_pilot.py  pilot.py
skills/codex/ahaos-insight-engine/: SKILL.md
tests/: test_agent_checkpoint.py  test_cli.py  test_config.py  test_core.py  test_local_pilot.py  test_pilot.py  test_pressure.py
